// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot with no data 1`] = `
<div
  className="ct-chart"
  id="chartundefined"
/>
`;

exports[`snapshot with valid data 1`] = `
<div
  className="ct-chart"
  id="chart123"
/>
`;
